--- a/index.html
+++ b/index.html
@@ -20,68 +20,72 @@
       text-align: center;
       user-select: none;
       overflow: hidden;
+      padding: 10px;
     }
     h1 {
-      font-size: 4.5em;
+      font-size: clamp(2em, 6vw, 3.5em);
       margin: 0;
-      text-shadow: 0 0 30px #ff0000, 0 0 60px #800000;
+      text-shadow: 0 0 20px #ff0000, 0 0 40px #800000;
     }
     h2 {
-      margin: 15px 0 40px 0;
-      font-size: 2em;
+      margin: 10px 0 25px 0;
+      font-size: clamp(1em, 4vw, 1.5em);
       color: #ccc;
       font-weight: 400;
     }
     .box {
-      border: 3px solid #ff3b3b;
-      padding: 50px;
+      border: 2px solid #ff3b3b;
+      padding: 25px;
       background: rgba(255, 0, 0, 0.08);
-      box-shadow: 0 0 35px #ff0000;
-      width: 85%;
-      max-width: 900px;
+      box-shadow: 0 0 20px #ff0000;
+      width: 100%;
+      max-width: 500px;
+      border-radius: 8px;
     }
     .blink {
       animation: blink 1s infinite;
-      font-size: 1.5em;
-      margin-bottom: 25px;
+      font-size: clamp(0.9em, 3.5vw, 1.2em);
+      margin-bottom: 15px;
     }
     @keyframes blink {
       50% { opacity: 0; }
     }
     #timer {
-      font-size: 2.5em;
-      margin: 25px 0;
+      font-size: clamp(1.2em, 5vw, 1.8em);
+      margin: 15px 0;
       color: #ffcc00;
-      text-shadow: 0 0 15px #ff0000;
+      text-shadow: 0 0 10px #ff0000;
     }
     input {
-      padding: 18px;
-      font-size: 1.5em;
+      padding: 12px;
+      font-size: 1em;
       text-align: center;
       border: 2px solid #ff3b3b;
       outline: none;
       background: #111;
       color: #0f0;
-      width: 70%;
-      margin-top: 15px;
+      width: 90%;
+      margin-top: 10px;
+      border-radius: 4px;
     }
     button {
-      margin-top: 20px;
-      padding: 16px 35px;
+      margin-top: 15px;
+      padding: 12px 25px;
       background: #ff3b3b;
       color: #fff;
-      font-size: 1.3em;
+      font-size: 1em;
       border: none;
       cursor: pointer;
       transition: 0.2s;
-      box-shadow: 0 0 18px #ff0000;
+      box-shadow: 0 0 12px #ff0000;
+      border-radius: 4px;
     }
     button:hover {
       background: #800000;
     }
     #result {
-      margin-top: 20px;
-      font-size: 1.2em;
+      margin-top: 15px;
+      font-size: 1em;
     }
   </style>
 </head>
